# Algorithms-And-Cpp-MIPT

./: README.md
Algorithms -Advanced course/2D_DP_on_templates/: ahalaimahalai.cpp  ahalaimahalai.h
Algorithms -Advanced course/Allocators/: allocator_with_tests.cpp
Algorithms -Advanced course/Deque/: CMakeLists.txt  main.cpp
Algorithms -Advanced course/Deque/src/: deque.cpp
Algorithms -Advanced course/Permutations/: permutation.h
Algorithms -Advanced course/Smart Pointers/: shared_and_weak_ptr.cpp  smartpointers.h  unique_ptr.cpp
Algorithms -Advanced course/TimSort/: CMakeLists.txt  README.md
Algorithms -Advanced course/Treap/: main.cpp
Computer Architecture and OS/Linux utilities/mv/: CMakeLists.txt  main.c  main.cpp
Computer Architecture and OS/Linux utilities/ps/: CMakeLists.txt  main.c  main.cpp
Computer Architecture and OS/Linux utilities/uniq/: CMakeLists.txt  input.txt  main.c  main.cpp
Computer Architecture and OS/TCP Chatroom/: CMakeLists.txt  main.c  server.c
Computer Architecture and OS/TCP Chatroom/client/: CMakeLists.txt  build.sh  clion_build.sh  main.c
Computer Architecture and OS/TCP Chatroom/server/: CMakeLists.txt  build.sh  clion_build.sh  main.c
Computer Architecture and OS/TCP Chatroom/text-formatting-tools/: msgformat.h
Computer Architecture and OS/lstring/: lstring.h
Databases/: DDL.sql  readme.md
Databases/Implementation/: DDL.sql
Databases/Implementation/processed_data/: .~lock.doctors.csv#  .~lock.medical_log.csv#  (+4 more)
Deque/headers/: rational.h  timsort.h  timsort_merge.h  timsort_params.h  timsort_stack.h
Geometry/: geometry.h
Matrix/: CMakeLists.txt  main.cpp
Rational/: rational.h
TimSort/: main.cpp
TimSort/headers/: timsort.h  timsort_merge.h  timsort_params.h  timsort_stack.h
(+31 files in other folders)
